objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>ApiCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is requested under Case # 10252479 by Karl Huber for the AppSupport integration purpose.</description>
        <label>API Created User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Web_Email__c</fullName>
        <description>Case #13181616</description>
        <formula>IF(
   OR(RIGHT( LOWER(FromAddress ),10 ) = "@cvent.com"
      ,RIGHT( LOWER(FromAddress ),17 ) = "@socialtables.com"
      ,RIGHT( LOWER(FromAddress ),10 ) = "@kapow.com")
, false
, true)</formula>
        <label>Web Email</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>FCS_Contact_Val</fullName>
        <active>true</active>
        <description>#12601601</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Parent.ContactId )),
Parent.RecordType.DeveloperName = 'Finance_Customer_Support',
CONTAINS(ToAddress , Parent.Contact.Email),
NOT(CONTAINS($User.Username, 'deployment@cvent.com'))
  
)</errorConditionFormula>
        <errorDisplayField>ToAddress</errorDisplayField>
        <errorMessage>Please remove the Contact from To Address</errorMessage>
    </validationRules>
</CustomObject>